empty Arrays and Objects no longer show collapse

--- a/docs/test.css
+++ b/docs/test.css
@@ -263,9 +263,6 @@ section {
 	margin-bottom: 0.25rem;
 }
 
-.demo-display {
-}
-
 .demo-button-holder {
 	display: flex;
 	justify-content: center;
